Ajout APIs
